# anvil-tui

./: .gitignore  ADVENTURE.md  AGENTS.md  AGILE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LESSONS_LEARNED.md  LICENSE  MANUAL.md  README.md  V2.2_ARCHITECTURE_REVIEW.md  audit.md  spec-final-exit.md  spec-v1.1.0.md  spec-v2.md  spec-v3.md  spec.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/anvil/: Cargo.toml
crates/anvil-agent/: Cargo.toml
crates/anvil-agent/src/: achievements.rs  agent.rs  autonomous.rs  dispatch.rs  event.rs  harness.rs  json_filter.rs  lib.rs  memory.rs  mode.rs  persona.rs  projects.rs  repo_map.rs  routing.rs  session.rs  skills.rs  system_prompt.rs  thinking.rs
crates/anvil-agent/tests/: agent_loop_tests.rs  harness_tests.rs  session_tests.rs
crates/anvil-config/: Cargo.toml
crates/anvil-config/src/: bundled_layouts.rs  bundled_skills.rs  inventory.rs  lib.rs  migration.rs  profiles.rs  provider.rs  settings.rs
crates/anvil-config/tests/: config_tests.rs
crates/anvil-llm/: Cargo.toml
crates/anvil-llm/src/: client.rs  lib.rs  message.rs  retry.rs  stream.rs  usage.rs
crates/anvil-llm/tests/: streaming_tests.rs
crates/anvil-mcp/: Cargo.toml
crates/anvil-mcp/src/: config.rs  lib.rs  manager.rs
crates/anvil-tools/: Cargo.toml
crates/anvil-tools/src/: definitions.rs  executor.rs  hooks.rs  ledger.rs  lib.rs  permission.rs  plugins.rs  tool_trait.rs  tools.rs  truncation.rs
crates/anvil-tools/tests/: definition_tests.rs  tool_tests.rs
crates/anvil/src/: app.rs  backend.rs  client.rs  commands.rs  context.rs  daemon.rs  display.rs  interactive.rs  ipc.rs  main.rs  prompts.rs  ralph.rs  render.rs  watcher.rs  zellij.rs
crates/anvil/src/help/: commands.md  config.md  skills.md  tools.md
scripts/: install.sh  test-e2e.ps1  test-e2e.sh
