[workspace]
members = [
    "crates/anvil-config",
    "crates/anvil-llm",
    "crates/anvil-tools",
    "crates/anvil-mcp",
    "crates/anvil-agent",
    "crates/anvil",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Async
async-trait = "0.1"
# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP & async
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# CLI & TUI
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"

# Error handling
anyhow = "1"

# Utilities
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

# Platform
libc = "0.2"

# Testing
tempfile = "3"
wiremock = "0.6"

# Internal crates
anvil-config = { path = "crates/anvil-config" }
anvil-llm = { path = "crates/anvil-llm" }
anvil-tools = { path = "crates/anvil-tools" }
anvil-mcp = { path = "crates/anvil-mcp" }
anvil-agent = { path = "crates/anvil-agent" }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"  # optimize for size
