[package]
name = "anvil-mcp"
version = "1.2.0"
description = "MCP (Model Context Protocol) client for connecting to external tool servers"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }
