[package]
name = "anvil-tools"
version = "0.1.0"
description = "Core tools: file_read, file_write, file_edit, shell, grep with permission confirmation"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anvil-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }
